--- a/templates/file_writer/index.html.twig
+++ b/templates/file_writer/index.html.twig
@@ -1,4 +1,21 @@
 {% extends "@UmbrellaAdmin/Layout/layout.html.twig" %}
 
 {% block content %}
+    <div class="card">
+        <div class="card-body">
+            <h4 class="header-title">Exemple - mode synchrone</h4>
+
+            <p>Génération d'un fichier de données en mode synchrone</p>
+            <a href="{{ path('app_admin_filewriter_sync') }}" class="btn btn-primary"><i class="mdi mdi-check mr-1"></i> Générer</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-body">
+            <h4 class="header-title">Exemple - mode asynchrone</h4>
+
+            <p>Génération d'un fichier de données en mode synchrone</p>
+            <a href data-xhr="{{ path('app_admin_filewriter_async') }}" class="btn btn-primary"><i class="mdi mdi-check mr-1"></i> Générer</a>
+        </div>
+    </div>
 {% endblock %}
