--- a/templates/form/layout.html.twig
+++ b/templates/form/layout.html.twig
@@ -24,6 +24,11 @@
                 <span>Select2</span>
             </a>
         </li>
+        <li class="nav-item">
+            <a href="{{ path('app_admin_form_collection') }}" class="nav-link rounded-0 {{ current_route == 'app_admin_form_collection' ? 'active' }}">
+                <span>Collection</span>
+            </a>
+        </li>
     </ul>
 
     <div class="tab-content">
