--- a/templates/menu/_custom_menu.html.twig
+++ b/templates/menu/_custom_menu.html.twig
@@ -1,10 +1,10 @@
 {% use "@UmbrellaAdmin/Menu/sidebar_block.html.twig" %}
 
-<div class="left-side-menu">
+<div class="custom-menu bg-dark" style="width: 300px;">
 
     <div class="logo text-center">
         <span class="logo-lg logo-title">
-            <i class="mdi mdi-umbrella mr-1"></i> {{ config.name }}
+            <i class="uil uil-bars"></i> Custom menu
         </span>
     </div>
 
