--- a/templates/menu/exemple.html.twig
+++ b/templates/menu/exemple.html.twig
@@ -10,6 +10,7 @@ services:
         tags:
             - {name: umbrella.menu.factory, method: createMenu, alias: custom_menu}
             - {name: umbrella.menu.renderer, method: renderMenu, alias: custom_menu}
+            - {name: umbrella.breadcrumb.renderer, method: renderBreadcrumb, alias: custom_menu}
             </pre>
 
             <h5>Breadcrumb</h5>
