--- a/templates/menu/exemple.html.twig
+++ b/templates/menu/exemple.html.twig
@@ -16,7 +16,7 @@ services:
             <h5>Breadcrumb</h5>
 
             <div class="border-dark border p-2">
-                {{ breadcrumb_render('custom_menu') }}
+                {{ breadcrumb_render('custom_menu', {class: 'mb-0'}) }}
             </div>
 
             <h5>Menu</h5>
