--- a/templates/icon/unicon.html.twig
+++ b/templates/icon/unicon.html.twig
@@ -1,4 +1,4 @@
-{% extends "@UmbrellaAdmin/Layout/layout.html.twig" %}
+{% extends "@UmbrellaAdmin/layout.html.twig" %}
 
 {% block content %}
 <div class="row">
