--- a/templates/menu/layout.html.twig
+++ b/templates/menu/layout.html.twig
@@ -1,4 +1,4 @@
-{% extends "@UmbrellaAdmin/Layout/layout.html.twig" %}
+{% extends "@UmbrellaAdmin/layout.html.twig" %}
 
 {% set current_route = app.request.attributes.get('_route') %}
 
