Add code example

--- a/templates/menu/howto.html.twig
+++ b/templates/menu/howto.html.twig
@@ -15,50 +15,14 @@
                 Pour créer un nouveau menu, vous devez à minimal déclarer une nouvelle factory :
             </p>
 
-            <pre class="border-dark border p-2">
-services:
-App\Menu\MyMenuFactory:
-    tags:
-        - {name: umbrella.menu.factory, method: createMenu, alias: my_menu}
-            </pre>
-
-            <pre class="border-dark border p-2">
-class MyMenuFactory
-{
-    /**
-     * @param MenuFactory $factory
-     * @return Menu
-     */
-    public function createMenu(MenuFactory $factory)
-    {
-        $menu = $factory->createMenu();
-
-        $menu->getRoot()->addChild('foo', [
-            'label' => 'bar,
-            'route' => 'app_admin_bar_index
-        ]);
-
-        return $menu;
-    }
-}
-            </pre>
+            <pre class="border-dark border p-2">{{  source('menu/_menu_factory_services.txt') }}</pre>
+            <pre class="border-dark border p-2">{{ source('menu/_menu_factory.txt') }}</pre>
 
             <p>Ce menu sera alors accessible avec l'alias <b>my_menu</b>. Par exemple <code>{{ "{{ render_menu('my_menu') }}" }}</code> fera le rendu de ce menu dans un twig.</p>
 
             <p>Il est aussi possible de définir un <b>renderer</b> pour le menu ainsi que le breadcrumb.</p>
 
-            <pre class="border-dark border p-2">
-services:
-    # menu renderer
-    App\Menu\MyMenuRenderer:
-        tags:
-            - {name: umbrella.menu.renderer, method: renderMenu, alias: my_menu}
-
-    # breadcrumb renderer
-    App\Menu\MyBreadcrumbRenderer:
-        tags:
-            - {name: umbrella.breadcrumb.renderer, method: renderBreadcrumb, alias: my_menu}
-            </pre>
+            <pre class="border-dark border p-2">{{ source('menu/_menu_services.txt') }}</pre>
 
             <p>
                 Si aucun menu renderer ou breadcrumb renderer n'est définit pour un alias. Alors le menu / breadcrumb renderer de l'alias par défaut sera utilisé (i.e: celui de l'alias <b>admin_sidebar</b>)
