--- a/templates/default/about.html.twig
+++ b/templates/default/about.html.twig
@@ -7,7 +7,7 @@
         </div>
         <div class="card-body">
             <p>Framework de création de back-office basée sur Symfony flex 5.</p>
-            <p>Mon git : <a href="https://github.com/acantepie" class="text-primary">/acantepie</a></p>
+            <p>Github : <a href="https://github.com/acantepie" class="text-primary">/acantepie</a></p>
         </div>
     </div>
 
