--- a/templates/default/about.html.twig
+++ b/templates/default/about.html.twig
@@ -6,6 +6,9 @@
             <h5 class="mr-2">Framework Umbrella v2.0</h5>
         </div>
         <div class="card-body">
+            <p class="alert alert-info">
+                <i class="mdi mdi-information mr-1"></i> La base de données du back-office est réinitialisée toutes les nuits
+            </p>
             <p>Framework de création de back-office basée sur Symfony flex 5.</p>
             <p>Github : <a href="https://github.com/acantepie" class="text-primary">/acantepie</a></p>
         </div>
