--- a/templates/form/layout.html.twig
+++ b/templates/form/layout.html.twig
@@ -6,6 +6,7 @@
     {{ nav_config({'active_strategy': 'current_route'}, 'pills') }}
     {{ nav_start() }}
         {{ nav_item({'label' : 'Base', 'route': 'app_admin_form_base'}) }}
+        {{ nav_item({'label' : 'Fichier', 'route': 'app_admin_form_file'}) }}
         {{ nav_item({'label' : 'Date', 'route': 'app_admin_form_date'}) }}
         {{ nav_item({'label' : 'Ckeditor', 'route': 'app_admin_form_ckeditor'}) }}
         {{ nav_item({'label' : 'Select2', 'route': 'app_admin_form_select2'}) }}
