extends login page instead of layout

--- a/templates/bundles/UmbrellaAdminBundle/Security/login.html.twig
+++ b/templates/bundles/UmbrellaAdminBundle/Security/login.html.twig
@@ -1,4 +1,4 @@
-{% extends '@UmbrellaAdmin/Security/layout.html.twig' %}
+{% extends '@!UmbrellaAdmin/Security/login.html.twig' %}
 
 {% block content %}
     <div class="card">
