--- a/templates/bundles/UmbrellaAdminBundle/Security/login.html.twig
+++ b/templates/bundles/UmbrellaAdminBundle/Security/login.html.twig
@@ -16,11 +16,11 @@
 
             {% if error %}
                 <div class="alert alert-warning text-center">
-                    {{ error.messageKey|trans(error.messageData, 'security') }}
+                    {{ error.messageKey|trans(error.messageData, 'security') | raw }}
                 </div>
             {% endif %}
 
-            <form action="{{ path('umbrella_admin_login') }}" method="post">
+            <form action="{{ path(constant('Umbrella\\AdminBundle\\Controller\\SecurityController::LOGIN_ROUTE')) }}" method="post">
 
                 <div class="form-group">
                     <label for="username">{{ 'form.label.username' | trans }}</label>
@@ -35,6 +35,8 @@
                     <input class="form-control" type="password" required="required" id="password" name="_password" value="umbrella">
                 </div>
 
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
                 <div class="form-group mb-0 text-center">
                     <button class="btn btn-primary" type="submit">
                         <i class="mdi mdi-check mr-1"></i> {{ 'action.signin' | trans }}
@@ -45,5 +47,6 @@
         </div>
     </div>
 {% endblock %}
+
 
 
