--- a/templates/landing.html.twig
+++ b/templates/landing.html.twig
@@ -10,6 +10,7 @@
         <meta content="Adrien Cantepie" name="author" />
 
         {{ encore_entry_link_tags('front') }}
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
     </head>
 
     <body class="h-100">
@@ -32,9 +33,19 @@
                                 Try yourself <i class="mdi mdi-arrow-right ml-1"></i>
                             </a>
 
-                            <h4 class="text-muted mt-2">
-                                Framwork bundles and demo website are available on <a href="https://github.com/acantepie/umbrella-demo" class="text-primary">github</a>.
-                            </h4>
+                            <div class="d-flex justify-content-center">
+                                <span class="mr-2">
+                                    Code are available on <a href="https://github.com/acantepie/umbrella-demo" class="text-primary">my github</a>.
+                                </span>
+                                <span class="mr-2">
+                                    <a class="github-button" href="https://github.com/acantepie" aria-label="Follow @acantepie on GitHub">Follow @acantepie</a>
+                                </span>
+                                <span>
+                                    <a class="github-button" href="https://github.com/acantepie/umbrella-demo" data-icon="octicon-star" aria-label="Star acantepie/umbrella-demo on GitHub">Star</a>
+                                </span>
+                            </div>
+
+
                         </div>
                     </div>
                 </div>
@@ -93,7 +104,7 @@
                             </div>
                             <h4 class="mt-3">Menu</h4>
                             <p class="text-muted mt-2 mb-0">
-                                Inspired by de <a href="https://github.com/KnpLabs/KnpMenuBundle" class="text-primary">KnpMenuBundle</a>. Build it like Symfony config definitions (TreeBuilder), supports security features.
+                                Inspired by <a href="https://github.com/KnpLabs/KnpMenuBundle" class="text-primary">KnpMenuBundle</a>. Build it like Symfony config definitions (TreeBuilder), supports security features.
                             </p>
                         </div>
                     </div>
