Rework Toast component

--- a/templates/admin/default/about.html.twig
+++ b/templates/admin/default/about.html.twig
@@ -62,7 +62,7 @@
 
             <ul>
                 <li class="pb-2">
-                    <strong>Sidebar</strong> : Utilise le composant Menu et la lib js <a href="https://github.com/onokumus/metismenu">meitsmenu</a>.
+                    <strong>Sidebar</strong> : Utilise le composant Menu et la lib js <a href="https://github.com/onokumus/metismenu" class="text-primary">metismenu</a>.
                 </li>
                 <li class="pb-2">
                     <strong>Gestion des utilisateurs</strong> : Inspiré de <a href="https://github.com/FriendsOfSymfony/FOSUserBundle" class="text-primary">FOSUserBundle</a>, son fonctionnement est identique (Utilise le nouveau système de sécurité symfony 5.2).
