--- a/templates/admin/datatable/multiple.html.twig
+++ b/templates/admin/datatable/multiple.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="card">
         <div class="card-header">
-            <h4>Poisson comestible</h4>
+            <h4>Edible fish</h4>
         </div>
         <div class="card-body">
             {{ render_table(edible_table) }}
@@ -12,7 +12,7 @@
 
     <div class="card">
         <div class="card-header">
-            <h4>Poisson non comestible</h4>
+            <h4>Not edible fish</h4>
         </div>
         <div class="card-body">
             {{ render_table(notedible_table) }}
